# mydb

./: .coverage  .env.example  .gitignore  ANALYSIS_README.md  README.md  dbdesign  main.py  mydb.db  pyproject.toml  test_database.py
.github/: copilot-instructions.md
.github/chatmodes/: MiniBeast5.chatmode.md
.github/memory/: agentequeimadura-implementation.md  antibiotic_implementation.md  api-implementation-2025-09-07.md  application-status-2025-09-17.md  audit-fields-implementation-2025-09-08.md  database-models-2025-09-07.md  doentes-crud-implementation-2025-09-08.md  frontend-implementation-2025-09-17.md  implementation-summary-2025-09-07.md  infection_implementation.md  linting_and_resource_management.md  mecanismo_queimadura_implementation.md  medicacao_implementation.md  origemdestino-implementation.md  patologia_implementation.md  queimaduras_implementation.md  resourcewarning-fix-implementation.md  task-test-completion-summary.md  tipoacidente-lookup-table-implementation-2025-09-08.md  trauma-implementation.md
.sentry-native/8b6ad469-a82f-4c51-226b-21af8803602a.run/: __sentry-breadcrumb1  __sentry-breadcrumb2  session.json
frontend/: package.json
frontend/src/: App.vue  main.ts
migrations/: env.py
migrations/versions/: 0409d9abe960_add_origemdestino_table_and_foreign_key_.py  0648119e4f45_add_queimaduras_table_and_foreign_key_.py  17057df566ef_initial_migration.py  2084421f8f6c_add_tipoacidente_table_and_foreign_key_.py  24b1412cf938_add_agentequeimadura_table_and_foreign_.py  32186512025c_add_audit_fields_created_at_and_last_.py  3262d9278c4d_add_mecanismoqueimadura_table_and_.py  4685a871eef9_numero_processo_and_numero_internamento_.py  5237a39a21e6_add_subtipo_agent_to_agenteinfeccioso_.py  79ff48b99f04_changed_the_data_types_of_data_.py  86ac7b0fb500_change_queimadura_local_anatomico_from_.py  87cf2f8181de_add_patologia_and_doentepatologia_.py  (+8 more)
quality/: BD_doentes_quality.py  ID_column_analysis_report.md  create_clean_data.py
src/: analysis.py  api.http  api.py  db.py
tests/: test_agenteinfeccioso.py  test_agentequeimadura.py  test_antibiotico.py  test_infecao.py  test_localanatomico.py  test_mecanismoqueimadura.py  test_medicacao.py  test_origemdestino.py  test_patologia.py  test_procedimento.py  test_queimadura.py  test_queimaduras.py  test_trauma.py
(+23 files in other folders)
